[build-system]
requires = ["setuptools >= 40.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axicli"
version = "3.9.7"
description = "AxiDraw CLI and Python API"
readme = "README.txt"
requires-python = ">=3.8"

authors = [
  { name = "Windell H. Oskay", email = "windell@evilmadscientist.com" }, # Optional
]

maintainers = [
  { name = "Evil Mad Science LLC", email = "contact@evilmadscientist.com" },
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]


dependencies = [
  "axidrawinternal==3.9.6",
  "certifi==2023.7.22",
  "charset-normalizer==2.0.7",
  "idna==3.3",
  "ink-extensions==2.0.0",
  "lxml==4.9.3",
  "plotink==1.9.0",
  "pyserial==3.5",
  "requests==2.31.0",
  "tqdm==4.64.0",
  "urllib3==1.26.18",
]

[project.optional-dependencies]
dev = [
  "axidrawinternal>=3.0.0",
  "coverage",
  "mock",
  "pyfakefs",
] # see Installation instructions
test = ["coverage", "mock", "pyfakefs"]
# hershey = ["hersheyadvanced"] # see Installation instructions

[tool.uv.sources]
axidrawinternal = { path = "prebuilt_dependencies/axidrawinternal-3.9.6-py2.py3-none-any.whl" }

[project.scripts]
axicli = "axicli.__main__:axidraw_CLI"
htacli = "axicli.__main__:hta_CLI"

[tool.setuptools.packages.find]
include = ["axicli", "axicli.*", "pyaxidraw", "pyaxidraw.*"]

[project.urls] # Optional
"CLI API documentation" = "https://axidraw.com/doc/cli_api/'"
"Python API documentation" = "https://axidraw.com/doc/cli_api/"
"About AxiDraw" = "https://axidraw.com/"
"A project by" = "https://shop.evilmadscientist.com"
